Added more explanation about compiler thresholds and JVM parameters to be used to allow the examples to work.